logfiles of validation should only be uploaded in case of failure

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,5 +1,5 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Validate & Deploy
 
 on:
   # Runs on pushes targeting the default branch
@@ -41,12 +41,13 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: '.'
+          path: "."
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
       - name: Upload HTML Validation Log
         uses: actions/upload-artifact@v3
-        with: 
+        if: failure()
+        with:
           name: log
           path: log.log
